# pytorch

./: .gitmodules
aten/src/ATen/: CMakeLists.txt  KinetoPluginAPI.cpp  KinetoPluginAPI.h
aten/src/ATen/xpu/profiler/: PtiActivityHandlers.cpp  XPUActivityApi.cpp  XPUActivityApi.h  XPUActivityBuffer.h  XPUActivityProfiler.cpp  XPUActivityProfiler.h  XPUProfilerMacros.h
c10/: CMakeLists.txt
c10/core/: KinetoPluginAPI.cpp  KinetoPluginAPI.h
c10/kineto_plugin/: CMakeLists.txt  register_api.cpp  register_api.h
c10/kineto_plugin/xpu/: XPUActivity.cpp  XPUActivity.h  XPUActivityApi.cpp  XPUActivityBuffer.h  XPUActivityProfiler.cpp  XPUActivityProfiler.h  XPUProfilerMacros.h
c10/xpu/: CMakeLists.txt  XPUFunctions.cpp
c10/xpu/profiler/: PtiActivityHandlers.cpp  XPUActivityApi.cpp  XPUActivityApi.h  XPUActivityBuffer.h  XPUActivityProfiler.cpp  XPUActivityProfiler.h  XPUProfilerMacros.h
caffe2/: CMakeLists.txt
cmake/: Dependencies.cmake
test/dynamo/: test_ctx_manager.py
test/profiler/: test_cpp_thread.py  test_profiler.py
torch/: __init__.py  _device_runtime.py  _stream_context_base.py  device_interface.py  gpu.py
torch/_dynamo/: device_function.py
torch/_dynamo/variables/: __init__.py  builder.py  ctx_manager.py  torch.py
torch/_inductor/: codecache.py  ir.py  triton_heuristics.py  utils.py
torch/csrc/profiler/: kineto_shim.cpp
torch/cuda/: __init__.py  _runtime.py  interface_register.py  streams.py
torch/testing/_internal/: common_utils.py
torch/utils/: _triton.py
